# zerosend

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/scripts/: apply_android_icons.py  patch_android_signing.py
.github/workflows/: release.yml
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/android-res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
src-tauri/plugins/gallery-saver/: Cargo.toml  build.rs
src-tauri/plugins/gallery-saver/android/: build.gradle.kts
src-tauri/plugins/gallery-saver/android/src/main/java/: GallerySaverPlugin.kt
src-tauri/plugins/gallery-saver/src/: android.rs  desktop.rs  lib.rs
src-tauri/src/: client.rs  commands.rs  discovery.rs  identity.rs  lib.rs  main.rs  mtls.rs  pinning.rs  server.rs  state.rs  tls.rs  trust.rs  types.rs
