[package]
name = "zerosend"
version = "0.4.0"
description = "Partage de fichiers local, chiffré, sans aucune connexion externe"
authors = ["ZeroSend"]
edition = "2021"
rust-version = "1.77"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "zerosend_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "fs", "io-util", "macros", "sync", "time"] }
axum = { version = "0.7", features = ["multipart"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
rcgen = "0.13"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
socket2 = { version = "0.5", features = ["all"] }
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
local-ip-address = "0.6"
mime_guess = "2"
dirs = "5"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
tokio-rustls = { version = "0.26", default-features = false }
tower-layer = "0.3"

[target.'cfg(target_os = "android")'.dependencies]
tauri-plugin-gallery-saver = { path = "plugins/gallery-saver" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

